k8s-deploy/web-deployment.yaml
# Web (Django) Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  namespace: my-chat-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
        version: v1
    spec:
      restartPolicy: Always  # Ensure restartPolicy is set correctly
      containers:
      - name: web
        image: husnain844/chat_crud_project:v1
        ports:
        - containerPort: 8000
        command: ["daphne", "-b", "0.0.0.0", "-p", "8000", "chatproject.asgi:application"]  # Add this here

---
# Web Service (NodePort)
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: my-chat-app
spec:
  type: NodePort
  ports:
    - name: http-web
      port: 8000
      targetPort: 8000
      nodePort: 30080  # This is the port on the node you will use to access the service
  selector:
    app: web
