k8s-deploy/services.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-chat-app-services
  namespace: my-chat-app
spec:
  hosts:
    - web-service.my-chat-app.svc.cluster.local
    - redis-service.my-chat-app.svc.cluster.local
    - mongo-0.mongo.my-chat-app.svc.cluster.local
    - mongo-1.mongo.my-chat-app.svc.cluster.local
    - mongo-2.mongo.my-chat-app.svc.cluster.local
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: web-service
            port:
              number: 8000
  tcp:
    - match:
        - port: 6379
      route:
        - destination:
            host: redis-service
            port:
              number: 6379

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: my-chat-app-destination-rules
  namespace: my-chat-app
spec:
  host: "*.my-chat-app.svc.cluster.local"
  subsets:
    - name: web
      labels:
        app: web
    - name: redis
      labels:
        app: redis
    - name: mongo
      labels:
        app: mongo
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    connectionPool:
      tcp:
        maxConnections: 100
      http:
        http2MaxRequests: 100

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mongo-cluster
  namespace: my-chat-app
spec:
  hosts:
    - mongo-0.mongo.my-chat-app.svc.cluster.local
    - mongo-1.mongo.my-chat-app.svc.cluster.local
    - mongo-2.mongo.my-chat-app.svc.cluster.local
  tcp:
    - route:
        - destination:
            host: mongo-0.mongo.my-chat-app.svc.cluster.local
            port:
              number: 27017
