k8s-deploy/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web-service
  namespace: my-chat-app
spec:
  hosts:
  - web-service.my-chat-app.svc.cluster.local
  http:
  - route:
    - destination:
        host: web-service
        port:
          number: 8000
